# rest-client

./: Cargo.toml
examples/: cat.rs
src/: lib.rs
